add google oauth2

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 PORT=3000
 MONGODB_URL=mongodb://localhost/project
-SECRET=put_your_secret_here
+SECRET=HarryPotter
+PROJECT_ID=zippy-haiku-210914
+PROJECT_NUMBER=546840658839
+CLIENT_ID=546840658839-7d0kiuka3v3b37gpl5kibn7g68pej7dl.apps.googleusercontent.com
+CLIENT_SECRET=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
