--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.2.1",
     "passport": "^0.5.2",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "run": "^1.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
