--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.2.1",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "run": "^1.4.0"
   },
   "devDependencies": {
