--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ PROJECT_ID=zippy-haiku-210914
 PROJECT_NUMBER=546840658839
 CLIENT_ID=546840658839-7d0kiuka3v3b37gpl5kibn7g68pej7dl.apps.googleusercontent.com
 CLIENT_SECRET=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
+AWS_BUCKET_NAME='portkey'
+AWS_BUCKET_REGION='eu-central-1'
+AWS_ACCESS_KEY='AKIAZI4RKPT25Q6J5SP6'
+AWS_SECRET_KEY='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'
