--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "authors": "Sam, Chris",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1075.0",
     "bcrypt": "^5.0.1",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.0",
@@ -17,8 +18,10 @@
     "express": "^4.17.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
+    "fs": "^0.0.1-security",
     "method-override": "^3.0.0",
     "mongoose": "^6.2.1",
+    "multer": "^1.4.4",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
