--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "authors": "Sam, Chris",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.28.1",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
@@ -19,6 +21,8 @@
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.2.1",
+    "multer": "^1.4.4",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
     "run": "^1.4.0"
