--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
   "authors": "Sam, Chris",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.26.0",
     "aws-sdk": "^2.1075.0",
+    "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.28.1",
     "connect-mongo": "^4.6.0",
+    "dompurify": "^2.3.6",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
     "fs": "^0.0.1-security",
+    "jsdom": "^19.0.0",
+    "marked": "^4.0.12",
     "method-override": "^3.0.0",
     "mongoose": "^6.2.1",
     "multer": "^1.4.4",
