--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Search, find, plan and explore places to travel to.",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "authors": "Sam, Chris",
