--- a/.env
+++ b/.env
@@ -1,11 +1,18 @@
 PORT=3000
 MONGODB_URL=mongodb://localhost/project
 SECRET=HarryPotter
+// GOOGLE
 PROJECT_ID=zippy-haiku-210914
 PROJECT_NUMBER=546840658839
 CLIENT_ID=546840658839-7d0kiuka3v3b37gpl5kibn7g68pej7dl.apps.googleusercontent.com
 CLIENT_SECRET=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
-AWS_BUCKET_NAME='portkey'
-AWS_BUCKET_REGION='eu-central-1'
-AWS_ACCESS_KEY='AKIAZI4RKPT25Q6J5SP6'
-AWS_SECRET_KEY='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'
+// CLOUDINARY
+cloud_name='portkey'
+api_key='383365125776715'
+api_secret='ka71L1mIMWKc8g_nXF5aFv0g8sc'
+// WEATHER API
+WEATHER_API_KEY=16e4e689116e821001569ecb6c10f12e
+RAPID_API_KEY='6bf214f8b0msh5f1e3ad82dfa45ap1449edjsnbe2cf7ab2a57'
+akid=AKIAZI4RKPT2U7K3G7X3
+
+32UhGJCmQsFlMYR2
