--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1075.0",
+    "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.28.1",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
@@ -22,6 +24,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.2.1",
     "multer": "^1.4.4",
+    "multer-storage-cloudinary": "^4.0.0",
+    "node-fetch": "^3.2.0",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
